Fix #34889: negative lights not working in glsl view and game engine.

Patch #35197 by Tyler Seacrest.